# kbuild-patchall

./: Cargo.toml  README.md  README_CN.md  test.yaml
.github/workflows/: publish.yaml
src/: config.rs  main.rs  utils.rs
src/commands/: build.rs  config.rs  download.rs  help.rs  mod.rs  patch.rs  update_self.rs  ver.rs
