[package]
name = "kbuild"
authors = ["yfblock@321353225@qq.com"]
description = "This package help you to build rust kernel quickly and easily."
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Byte-OS/kbuild"

[dependencies]
inventory = "0.3.15"
color-print = "0.3.5"
version = "3.0.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
anyhow = "1.0"
serde_yaml = "0.9"
json = "0.12.4"
